# PI

./: .gitignore  CMakeLists.txt
Task2_SpriteStruct/: CMakeLists.txt
Task2_SpriteStruct/src/: frame.h  main.cpp  sprite.h  sprite_type.h  vector3.h
Task3_DiceGame/: CMakeLists.txt
Task3_DiceGame/src/: dice.cpp  dice.h  dice_game.cpp  dice_game.h  main.cpp
Task4_PlantClasses/: CMakeLists.txt
Task4_PlantClasses/src/: flower.cpp  flower.h  grass.cpp  grass.h  main.cpp  plant.cpp  plant.h  shrub.cpp  shrub.h  tree.cpp  tree.h
Task5_CustomArray/: CMakeLists.txt
Task5_CustomArray/src/: main.cpp  my_cpp_array.cpp  my_cpp_array.h
Task6_VehicleSimulator/: CMakeLists.txt
Task6_VehicleSimulator/src/: base_car.cpp  base_car.h  main.cpp  sports_car.cpp  sports_car.h  suv.cpp  suv.h
Task6_VehicleSimulator/src/brakes/: brakes.cpp  brakes.h  disc_brakes.cpp  disc_brakes.h  drum_brakes.cpp  drum_brakes.h
Task6_VehicleSimulator/src/engine/: electric_motor.cpp  electric_motor.h  engine.cpp  engine.h  v6_engine.cpp  v6_engine.h
Task6_VehicleSimulator/src/frame/: frame.cpp  frame.h  ladder_frame.cpp  ladder_frame.h  monocoque_frame.cpp  monocoque_frame.h
Task6_VehicleSimulator/src/gears/: automatic_gears.cpp  automatic_gears.h  gears.cpp  gears.h  manual_gears.cpp  manual_gears.h
Task6_VehicleSimulator/src/suspension/: air_suspension.cpp  air_suspension.h  coilover_suspension.cpp  coilover_suspension.h  suspension.cpp  suspension.h
Task6_VehicleSimulator/src/wheels/: off_road_wheels.cpp  off_road_wheels.h  sport_wheels.cpp  sport_wheels.h  wheels.cpp  wheels.h
Task7_RaylibSprite/: CMakeLists.txt
Task7_RaylibSprite/src/: main.cpp  sprite.cpp  sprite.h
Task8_LevelClass/: CMakeLists.txt
Task8_LevelClass/src/: level.cpp  level.h  main.cpp
cmake/: raylib.cmake
